src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Driven__c</fullName>
        <description>Driven of the campaign</description>
        <label>Driven</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Campaign Organized by Central</fullName>
                </value>
                <value>
                    <fullName>Extended Activities from Central’s Campaign</fullName>
                </value>
                <value>
                    <fullName>Local Campaign on Festivals</fullName>
                </value>
                <value>
                    <fullName>Campaign Organized by Dealer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Notification_to_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Notification to Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <description>Central Campaign: Event Type of the campaign.</description>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Road Show</fullName>
                </value>
                <value>
                    <fullName>Test Drive</fullName>
                </value>
                <value>
                    <fullName>Auto Show</fullName>
                </value>
                <value>
                    <fullName>Festival</fullName>
                </value>
                <value>
                    <fullName>New Car Launch</fullName>
                </value>
                <value>
                    <fullName>Joint Event</fullName>
                </value>
                <value>
                    <fullName>Showroom Event</fullName>
                </value>
                <value>
                    <fullName>Sports Marketing</fullName>
                </value>
                <value>
                    <fullName>Charity</fullName>
                </value>
                <value>
                    <fullName>Prints relevant</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>New Showroom</fullName>
                </value>
                <value>
                    <fullName>Sales_quarter</fullName>
                </value>
                <value>
                    <fullName>Sales_central DM</fullName>
                </value>
                <value>
                    <fullName>Sales_new model target</fullName>
                </value>
                <value>
                    <fullName>Sales_fair</fullName>
                </value>
                <value>
                    <fullName>Sales_others</fullName>
                </value>
                <value>
                    <fullName>Sales_catalogue response</fullName>
                </value>
                <value>
                    <fullName>Finance_cross point</fullName>
                </value>
                <value>
                    <fullName>Finance_maturity</fullName>
                </value>
                <value>
                    <fullName>Finance_insurance</fullName>
                </value>
                <value>
                    <fullName>Aftersales_MOT</fullName>
                </value>
                <value>
                    <fullName>Aftersales_Mcare Inspection</fullName>
                </value>
                <value>
                    <fullName>Aftersales_inspections (After 4years)</fullName>
                </value>
                <value>
                    <fullName>Aftersales_service program</fullName>
                </value>
                <value>
                    <fullName>Aftersales_new car six month inspections</fullName>
                </value>
                <value>
                    <fullName>Aftersales_accessory</fullName>
                </value>
                <value>
                    <fullName>Aftersales_collection</fullName>
                </value>
                <value>
                    <fullName>Event_motor show</fullName>
                </value>
                <value>
                    <fullName>Event_sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Execution_End_Date__c</fullName>
        <description>This field is used to capture the end date of the execution campaign</description>
        <label>Execution End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Execution_Start_Date__c</fullName>
        <description>This field is used to capture the start date of the execution campaign</description>
        <label>Execution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Execution_Type__c</fullName>
        <description>Used only for Campaign Execution record type. To defined the execution channel.</description>
        <label>Execution Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OB Call</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
                <value>
                    <fullName>MMS</fullName>
                </value>
                <value>
                    <fullName>eDM</fullName>
                </value>
                <value>
                    <fullName>DM</fullName>
                </value>
                <value>
                    <fullName>Segmentation Only</fullName>
                </value>
                <value>
                    <fullName>MyM</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>eMail</fullName>
                </value>
                <value>
                    <fullName>Survey</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>My Mercedes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expected_Cars_Sale__c</fullName>
        <label>Expected Cars Sale</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Lead__c</fullName>
        <label>Expected Leads (%)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Expected_Participation__c</fullName>
        <label>Expected Participation (%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Expected_Registration__c</fullName>
        <label>Expected Registration (%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Expected_Response_Rate__c</fullName>
        <label>Expected Response Rate (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FS_Budget__c</fullName>
        <label>FS Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Final_List_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to indicate if the list is approved and final</description>
        <label>Final List Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flow_URL__c</fullName>
        <label>Flow URL</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Index__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interval_Before_Execution_Days__c</fullName>
        <label>Interval Before Execution (Days)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interval_Before_Execution_Hours__c</fullName>
        <description>Used only for Campaign Execution.</description>
        <label>Interval Before Execution (Hours)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Parent_Campaign_Active__c</fullName>
        <formula>Parent.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Parent Campaign Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to reflect if the campaign is synced with MC</description>
        <label>Is Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Run_Date__c</fullName>
        <label>LastRunDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Creation_flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Lead Creation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBTH_CAC_Campaign_Type__c</fullName>
        <label>MBTH CAC Campaign Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Auto Show</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Loyalty Program</fullName>
                </value>
                <value>
                    <fullName>Competitions and Sales</fullName>
                </value>
                <value>
                    <fullName>Interview, Recall</fullName>
                </value>
                <value>
                    <fullName>Product Issue</fullName>
                </value>
                <value>
                    <fullName>New Car Launch</fullName>
                </value>
                <value>
                    <fullName>Ad-hoc</fullName>
                </value>
                <value>
                    <fullName>Ongoing</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MBTH_Campaign_Channels__c</fullName>
        <label>MBTH Campaign Channels</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
                <value>
                    <fullName>Call</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
                <value>
                    <fullName>Social Media</fullName>
                </value>
                <value>
                    <fullName>Mobile Showroom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MBTH_Execution_Type__c</fullName>
        <label>MBTH Execution Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OB Call</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
                <value>
                    <fullName>MMS</fullName>
                </value>
                <value>
                    <fullName>eDM</fullName>
                </value>
                <value>
                    <fullName>DM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MBTH_Media_Type__c</fullName>
        <label>Media Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Out Of Home</fullName>
                </value>
                <value>
                    <fullName>TV</fullName>
                </value>
                <value>
                    <fullName>Radio Broadcast</fullName>
                </value>
                <value>
                    <fullName>Digital</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Newspaper</fullName>
                </value>
                <value>
                    <fullName>Magazine</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MD__c</fullName>
        <defaultValue>IF(ISPICKVAL($User.Market__c, &apos;AU&apos;) ,&apos;AU&apos;, 
		IF(ISPICKVAL($User.Market__c, &apos;CN&apos;), &apos;CN&apos;, 
		IF(ISPICKVAL($User.Market__c, &apos;JP&apos;), &apos;JP&apos;,IF(ISPICKVAL($User.Market__c, &apos;KR&apos;), &apos;KR&apos;,IF(ISPICKVAL($User.Market__c, &apos;TH&apos;), &apos;TH&apos;,&apos;NA&apos;)))))</defaultValue>
        <description>For JP users set to JP</description>
        <label>Market Discriminator</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPC_Budget__c</fullName>
        <label>MPC Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MainParentCampaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Main Parent Campaign</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Campaign.RecordTypeId</field>
                <operation>equals</operation>
                <value>Planning &amp; Design Campaign</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaigns (Campaign)</relationshipLabel>
        <relationshipName>Campaigns2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Max_Car_Age__c</fullName>
        <description>Max Car Age of the campaign</description>
        <label>Max Car Age</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Media_Type__c</fullName>
        <description>Central Campaign: Media Type of the campaign.</description>
        <label>Media Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OOH</fullName>
                </value>
                <value>
                    <fullName>TV</fullName>
                </value>
                <value>
                    <fullName>Broadcast</fullName>
                </value>
                <value>
                    <fullName>Digital</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Newspaper</fullName>
                </value>
                <value>
                    <fullName>Magazine</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Min_Car_Age__c</fullName>
        <description>Min Car Age of the campaign</description>
        <label>Min Car Age</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_Run_Date__c</fullName>
        <label>NextRunDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Noof_Car_display__c</fullName>
        <label>No Of Cars  Display</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OBSMSTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OB SMS Template</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Template__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>SMS</value>
            </filterItems>
            <filterItems>
                <field>$Source.Execution_Type__c</field>
                <operation>equals</operation>
                <value>OB Call</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Template__c</referenceTo>
        <relationshipLabel>Campaigns (OB)</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Event_Type__c</fullName>
        <description>Retail Campaign: Other Event Type of the campaign</description>
        <label>Other Event Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Media_Type__c</fullName>
        <description>Retail Campaign: Other Media Type of the campaign</description>
        <label>Other Media Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participating_Region_Province__c</fullName>
        <label>Participating Region-Province</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Province1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plan_End_Date__c</fullName>
        <description>Retail Campaign: Date for the campaign end.</description>
        <label>Plan End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plan_Start_Date__c</fullName>
        <description>Retail Campaign: Date for the campaign start.</description>
        <label>Plan Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previous_Campaign_Execution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used only for Campaign Execution record type. To build the sequence of Campaign Executions.</description>
        <label>Previous Campaign Execution</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Consequent Campaign Executions</relationshipLabel>
        <relationshipName>Consequent_Campaign_Executions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Publish_Date__c</fullName>
        <description>Date for the campaign publish to dealer.</description>
        <inlineHelpText>Date for the campaign publish to dealer.</inlineHelpText>
        <label>Publish Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <description>Central Campaign: Purpose of the campaign</description>
        <label>Purpose</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Brand Enhancement</fullName>
                </value>
                <value>
                    <fullName>Acquisition</fullName>
                </value>
                <value>
                    <fullName>Increase Sales</fullName>
                </value>
                <value>
                    <fullName>Loyalty</fullName>
                </value>
                <value>
                    <fullName>Increase after Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Questionnaire__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SurveyForce Questionnaire</label>
        <referenceTo>Survey__c</referenceTo>
        <relationshipLabel>Campaign Executions</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Range__c</fullName>
        <label>Range</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Class1__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>461</fullName>
                </value>
                <value>
                    <fullName>A205</fullName>
                </value>
                <value>
                    <fullName>A207</fullName>
                </value>
                <value>
                    <fullName>A208</fullName>
                </value>
                <value>
                    <fullName>A209</fullName>
                </value>
                <value>
                    <fullName>A217</fullName>
                </value>
                <value>
                    <fullName>BR447</fullName>
                </value>
                <value>
                    <fullName>BR463</fullName>
                </value>
                <value>
                    <fullName>BR639</fullName>
                </value>
                <value>
                    <fullName>C117</fullName>
                </value>
                <value>
                    <fullName>C190</fullName>
                </value>
                <value>
                    <fullName>C197</fullName>
                </value>
                <value>
                    <fullName>C199</fullName>
                </value>
                <value>
                    <fullName>C204</fullName>
                </value>
                <value>
                    <fullName>C205</fullName>
                </value>
                <value>
                    <fullName>C207</fullName>
                </value>
                <value>
                    <fullName>C208</fullName>
                </value>
                <value>
                    <fullName>C209</fullName>
                </value>
                <value>
                    <fullName>C215</fullName>
                </value>
                <value>
                    <fullName>C216</fullName>
                </value>
                <value>
                    <fullName>C217</fullName>
                </value>
                <value>
                    <fullName>C218</fullName>
                </value>
                <value>
                    <fullName>C219</fullName>
                </value>
                <value>
                    <fullName>C238</fullName>
                </value>
                <value>
                    <fullName>C253</fullName>
                </value>
                <value>
                    <fullName>C292</fullName>
                </value>
                <value>
                    <fullName>CL203</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>R129</fullName>
                </value>
                <value>
                    <fullName>R170</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ready_for_List_Maintenance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to reflect if List is ready for the dealer to start the list Maintenance process</description>
        <label>Ready for List Maintenance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ready_to_Execute__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ready to Execute in EP?</description>
        <label>Ready to Execute?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Refresh_Campaign_Members__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Refresh Campaign Members</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region_Best_Number__c</fullName>
        <label>Region Best Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region_Budget__c</fullName>
        <description>Retail Campaign: Region Budget of the campaign</description>
        <label>Region Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Region_Due_Date__c</fullName>
        <label>Region Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Region_Recommend_Number__c</fullName>
        <label>Region Recommend Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Region of the campaign</description>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Eastern</fullName>
                </value>
                <value>
                    <fullName>Northern</fullName>
                </value>
                <value>
                    <fullName>Southern</fullName>
                </value>
                <value>
                    <fullName>Western</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Repeat_End__c</fullName>
        <label>End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Repeat_Frequency__c</fullName>
        <label>Repeat Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Repeated_Campaign__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Bi-Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Repeat_From__c</fullName>
        <label>From</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Repeated_Campaign__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Repeated Campaign?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resource_Channels__c</fullName>
        <label>Resource Channels</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MB Database</fullName>
                </value>
                <value>
                    <fullName>Dealer Database</fullName>
                </value>
                <value>
                    <fullName>3rd Party Database</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Response_Date__c</fullName>
        <description>This field is used to capture the response date</description>
        <label>Response Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Retail_Due_Date__c</fullName>
        <label>Retail Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Retail_Start_Date__c</fullName>
        <label>Retail Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SMS_Task_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SMS/MMS Task Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SQL_Statement__c</fullName>
        <label>SQL Statement</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>S_M_Sub_group__c</fullName>
        <label>S&amp;M Sub-group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ALL</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Finance - Insurance</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Sales - Finance</fullName>
                </value>
                <value>
                    <fullName>Sales - Insurance</fullName>
                </value>
                <value>
                    <fullName>Sales - Service</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Service - Finance</fullName>
                </value>
                <value>
                    <fullName>Service- Finance- Insurance</fullName>
                </value>
                <value>
                    <fullName>Service - Insurance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scale_Volume__c</fullName>
        <label>Scale/Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SegWorkingDay__c</fullName>
        <description>Values from 1 to 31- dependent picklist</description>
        <label>Working Day</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SegWorkingMonth__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>